OPHYK-206 Create an ecs service and route traffic from the application load balancer